crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_parameters_method_interface.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
interface A { <T> T func(); }
TOKENS:
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
LESS "<"
IDENTIFIER "T"
GREATER ">"
WHITESPACE " "
IDENTIFIER "T"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  INTERFACE_DECL
    MODIFIER_LIST
    INTERFACE_KW "interface"
    WHITESPACE " "
    IDENTIFIER "A"
    INTERFACE_BODY
      WHITESPACE " "
      L_BRACE "{"
      METHOD_DECL
        MODIFIER_LIST
        TYPE_PARAMETERS
          WHITESPACE " "
          LESS "<"
          TYPE_PARAMETER
            IDENTIFIER "T"
          GREATER ">"
        TYPE
          WHITESPACE " "
          IDENTIFIER "T"
        WHITESPACE " "
        IDENTIFIER "func"
        FORMAL_PARAMETERS
          L_PAREN "("
          R_PAREN ")"
        SEMICOLON ";"
      WHITESPACE " "
      R_BRACE "}"
