crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_parameters_method_typed_return.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { <T> T func() {} }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
LESS "<"
IDENTIFIER "T"
GREATER ">"
WHITESPACE " "
IDENTIFIER "T"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  CLASS_DECL
    MODIFIER_LIST
    CLASS_KW "class"
    WHITESPACE " "
    IDENTIFIER "A"
    CLASS_BODY
      WHITESPACE " "
      L_BRACE "{"
      METHOD_DECL
        MODIFIER_LIST
        TYPE_PARAMETERS
          WHITESPACE " "
          LESS "<"
          TYPE_PARAMETER
            IDENTIFIER "T"
          GREATER ">"
        TYPE
          WHITESPACE " "
          IDENTIFIER "T"
        WHITESPACE " "
        IDENTIFIER "func"
        FORMAL_PARAMETERS
          L_PAREN "("
          R_PAREN ")"
        BLOCK
          WHITESPACE " "
          L_BRACE "{"
          R_BRACE "}"
      WHITESPACE " "
      R_BRACE "}"
