crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_parameters_with_intersection_bound.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
interface A<T extends B & C> {}
TOKENS:
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
LESS "<"
IDENTIFIER "T"
WHITESPACE " "
EXTENDS_KW "extends"
WHITESPACE " "
IDENTIFIER "B"
WHITESPACE " "
BIT_AND "&"
WHITESPACE " "
IDENTIFIER "C"
GREATER ">"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  INTERFACE_DECL
    MODIFIER_LIST
    INTERFACE_KW "interface"
    WHITESPACE " "
    IDENTIFIER "A"
    TYPE_PARAMETERS
      LESS "<"
      TYPE_PARAMETER
        IDENTIFIER "T"
        TYPE_BOUND
          WHITESPACE " "
          EXTENDS_KW "extends"
          TYPE
            WHITESPACE " "
            IDENTIFIER "B"
          WHITESPACE " "
          BIT_AND "&"
          TYPE
            WHITESPACE " "
            IDENTIFIER "C"
      GREATER ">"
    INTERFACE_BODY
      WHITESPACE " "
      L_BRACE "{"
      R_BRACE "}"
